crates/aven-check/tests/fixtures/check/valid/string-interpolation.av
value : Text = "hi ${1 + 2}"
