crates/aven-check/tests/fixtures/check/invalid/contextual-block-mismatch.av
value : Text =
  first = 1
  first
